# PostREISE

./: .dockerignore  .git-blame-ignore-revs  .gitignore  ATTRIBUTION.md  Dockerfile  Pipfile  README  README.md  docker-compose.yml  example_PR_file.txt  optional-requirements.txt  pytest.ini  requirements.txt  requirements_dep_tree.txt  requirements_freeze.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  data-intake.md
.github/workflows/: ci-test.yml  coverage.yml  docker-build.yml  lint.yml  packages.yml  release.yml  test.yml
docs/: docker-compose.yml  helper.py  plot.rst  run_snippets.ipynb
docs/code/: capacity_vs_cf_solar_western_scatter.py  capacity_vs_cost_curve_slope_coal_eastern_scatter.py  capacity_vs_curtailment_solar_western_scatter.py  capacity_vs_generation_bar.py  capacity_vs_generation_pie.py  curtailment_eastern.py  curtailment_usa_heatmap.py  emission_bar.py  emission_map.py  emission_map_carbon_diff.py  energy_emission_stack_bar.py  generation_stack_western_ts.py  interconnection_map.py  lmp_usa_map.py  pf_snapshot_map.py  shortfall_nv.py  utilization_map.py
extract/: ExtractData.py  extractdata.py  get_power_output_from_gen.m
postreise/: __init__.py
postreise/analyze/: __init__.py  analyze.py  binding.py  carbon.py  check.py  congestion.py  curtailment.py  demand.py  distance.py  helpers.py  mapping.py  (+3 more)
tests/: carbon_mock.py  carbon_test.py  context.py  mock_carbon.py  mocks.py  test_carbon.py  test_mocks.py  test_mwmiles.py
web_dashboard/: Dockerfile  README.md  docker-compose.yml  pull_request_template.md
(+4302 files in other folders)
