[metadata]
name = postreise
version = 0.5.2
author = Breakthrough Energy
author_email = sciences@breakthroughenergy.org
description = Extract, analyze and plot data from scenario
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Breakthrough-Energy/PostREISE
project_urls =
    Bug Tracker = https://github.com/Breakthrough-Energy/PostREISE/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    powersimdata~=0.5.5
    bokeh
    matplotlib
    pyproj

[options.package_data]
postreise = data/*.csv
